basic rback system

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -4,7 +4,9 @@
   "Add New Role": "Add New Role",
   "Add New User": "Add New User",
   "Add Role": "Add Role",
+  "Add Role to User": "Add Role to User",
   "At least one permission must be selected": "At least one permission must be selected",
+  "At least one role must be selected": "At least one role must be selected",
   "Builds": "Builds",
   "Change Password": "Change Password",
   "Change Your Password": "Change Your Password",
@@ -27,6 +29,7 @@
   "Exit": "Exit",
   "Explorer": "Explorer",
   "Failed to add role": "Failed to add role",
+  "Failed to add roles to user": "Failed to add roles to user",
   "Failed to change password": "Failed to change password",
   "Failed to retrieve the newly created user": "Failed to retrieve the newly created user",
   "First Name": "First Name",
@@ -42,6 +45,7 @@
   "Login": "Login",
   "Login failed": "Login failed",
   "Manage": "Manage",
+  "Manage Roles": "Manage Roles",
   "Manage Users": "Manage Users",
   "Missing required fields: firstName, lastName, userName, or password": "Missing required fields: firstName, lastName, userName, or password",
   "Missing required fields: userName, password": "Missing required fields: userName, password",
@@ -62,6 +66,8 @@
   "Role Name": "Role Name",
   "Role added successfully": "Role added successfully",
   "Role name is already taken. Please choose another one.": "Role name is already taken. Please choose another one.",
+  "Roles": "Roles",
+  "Roles added successfully": "Roles added successfully",
   "Settings": "Settings",
   "Show password": "Show password",
   "Success": "Success",
