--- a/i18n/locales/fa.json
+++ b/i18n/locales/fa.json
@@ -4,7 +4,9 @@
   "Add New Role": "افزودن نقش جدید",
   "Add New User": "افزودن کاربر جدید",
   "Add Role": "Add Role",
+  "Add Role to User": "Add Role to User",
   "At least one permission must be selected": "At least one permission must be selected",
+  "At least one role must be selected": "At least one role must be selected",
   "Builds": "ساخت‌ها",
   "Change Password": "تغییر رمز عبور",
   "Change Your Password": "رمز عبور خود را تغییر دهید",
@@ -27,6 +29,7 @@
   "Exit": "خروج",
   "Explorer": "کاوشگر",
   "Failed to add role": "Failed to add role",
+  "Failed to add roles to user": "Failed to add roles to user",
   "Failed to change password": "تغییر رمز عبور با شکست مواجه شد",
   "Failed to retrieve the newly created user": "دریافت اطلاعات کاربر جدید با مشکل مواجه شد",
   "First Name": "نام",
@@ -42,6 +45,7 @@
   "Login": "ورود",
   "Login failed": "ورود با مشکل مواجه شد",
   "Manage": "مدیریت",
+  "Manage Roles": "Manage Roles",
   "Manage Users": "مدیریت کاربران",
   "Missing required fields: firstName, lastName, userName, or password": "فیلدهای مورد نیاز: نام، نام خانوادگی، نام کاربری یا رمز عبور وارد نشده‌اند",
   "Missing required fields: userName, password": "نام کاربری و رمز عبور الزامی است",
@@ -62,6 +66,8 @@
   "Role Name": "Role Name",
   "Role added successfully": "Role added successfully",
   "Role name is already taken. Please choose another one.": "Role name is already taken. Please choose another one.",
+  "Roles": "Roles",
+  "Roles added successfully": "Roles added successfully",
   "Settings": "تنظیمات",
   "Show password": "نمایش رمز عبور",
   "Success": "موفقیت‌آمیز",
