--- a/i18n/locales/fa.json
+++ b/i18n/locales/fa.json
@@ -3,34 +3,34 @@
   "About": "درباره",
   "Add New Role": "افزودن نقش جدید",
   "Add New User": "افزودن کاربر جدید",
-  "Add Role": "Add Role",
-  "Add Role to User": "Add Role to User",
-  "At least one permission must be selected": "At least one permission must be selected",
-  "At least one role must be selected": "At least one role must be selected",
+  "Add Role": "افزودن نقش",
+  "Add Role to User": "افزودن نقش به کاربر",
+  "At least one permission must be selected": "حداقل یک مجوز باید انتخاب شود",
+  "At least one role must be selected": "حداقل یک نقش باید انتخاب شود",
   "Builds": "ساخت‌ها",
   "Change Password": "تغییر رمز عبور",
   "Change Your Password": "رمز عبور خود را تغییر دهید",
   "Comments": "نظرات",
-  "Confirm Password": "تایید رمز عبور",
-  "Confirm Password must be at least 6 characters": "رمز عبور تایید شده باید حداقل ۶ کاراکتر باشد",
-  "Confirm password": "تایید رمز عبور",
+  "Confirm Password": "تأیید رمز عبور",
+  "Confirm Password must be at least 6 characters": "رمز عبور تأیید شده باید حداقل ۶ کاراکتر باشد",
+  "Confirm password": "تأیید رمز عبور",
   "Contact": "تماس",
-  "Content saved successfully": "Content saved successfully",
+  "Content saved successfully": "محتوا با موفقیت ذخیره شد",
   "Current Password": "رمز عبور فعلی",
   "Dashboard": "داشبورد",
-  "Description": "Description",
+  "Description": "توضیحات",
   "English": "انگلیسی",
   "Enter Password": "رمز عبور را وارد کنید",
   "Enter password": "رمز عبور را وارد کنید",
-  "Enter role description": "Enter role description",
-  "Enter role name": "Enter role name",
+  "Enter role description": "توضیحات نقش را وارد کنید",
+  "Enter role name": "نام نقش را وارد کنید",
   "Enter username": "نام کاربری را وارد کنید",
   "Error": "خطا",
   "Ex: Developer Lead": "مثال: سرپرست توسعه",
   "Exit": "خروج",
   "Explorer": "کاوشگر",
-  "Failed to add role": "Failed to add role",
-  "Failed to add roles to user": "Failed to add roles to user",
+  "Failed to add role": "افزودن نقش با شکست مواجه شد",
+  "Failed to add roles to user": "افزودن نقش‌ها به کاربر با شکست مواجه شد",
   "Failed to change password": "تغییر رمز عبور با شکست مواجه شد",
   "Failed to retrieve the newly created user": "دریافت اطلاعات کاربر جدید با مشکل مواجه شد",
   "First Name": "نام",
@@ -39,54 +39,54 @@
   "Home": "خانه",
   "Internal Server Error": "خطای داخلی سرور",
   "Internal Server Error. Please try again later.": "خطای داخلی سرور. لطفاً بعداً دوباره امتحان کنید.",
-  "Invalid username or password": "نام کاربری یا رمز عبور اشتباه است",
+  "Invalid username or password": "نام کاربری یا رمز عبور نامعتبر است",
   "Items": "آیتم‌ها",
   "Last Name": "نام خانوادگی",
   "Latest Incoming": "آخرین ورودی‌ها",
   "Login": "ورود",
-  "Login failed": "ورود با مشکل مواجه شد",
+  "Login failed": "ورود ناموفق بود",
   "Manage": "مدیریت",
-  "Manage Roles": "Manage Roles",
+  "Manage Roles": "مدیریت نقش‌ها",
   "Manage Users": "مدیریت کاربران",
-  "Missing required fields: firstName, lastName, userName, or password": "فیلدهای مورد نیاز: نام، نام خانوادگی، نام کاربری یا رمز عبور وارد نشده‌اند",
+  "Missing required fields: firstName, lastName, userName, or password": "فیلدهای ضروری: نام، نام خانوادگی، نام کاربری یا رمز عبور وارد نشده‌اند",
   "Missing required fields: userName, password": "نام کاربری و رمز عبور الزامی است",
   "Must be at least 3 characters": "باید حداقل ۳ کاراکتر باشد",
   "New Password": "رمز عبور جدید",
   "Noting is Here :(": "چیزی اینجا وجود ندارد :(",
   "Password": "رمز عبور",
-  "Password changed successfully": "رمز عبور با موفقیت تغییر یافت",
+  "Password changed successfully": "رمز عبور با موفقیت تغییر کرد",
   "Password must be at least 6 characters": "رمز عبور باید حداقل ۶ کاراکتر باشد",
   "Passwords do not match": "رمزهای عبور مطابقت ندارند",
-  "Permissions": "Permissions",
+  "Permissions": "مجوزها",
   "Persian": "فارسی",
   "Personal Details": "اطلاعات شخصی",
-  "Please provide a role name, a description, and select the appropriate permissions.": "Please provide a role name, a description, and select the appropriate permissions.",
+  "Please provide a role name, a description, and select the appropriate permissions.": "لطفاً نام نقش، توضیحات و مجوزهای مناسب را انتخاب کنید.",
   "Profile": "پروفایل",
-  "Publish": "Publish",
+  "Publish": "انتشار",
   "Register": "ثبت‌نام",
   "Registered successfully": "ثبت‌نام با موفقیت انجام شد",
-  "Role Name": "Role Name",
-  "Role added successfully": "Role added successfully",
-  "Role name is already taken. Please choose another one.": "Role name is already taken. Please choose another one.",
-  "Roles": "Roles",
-  "Roles added successfully": "Roles added successfully",
+  "Role Name": "نام نقش",
+  "Role added successfully": "نقش با موفقیت افزوده شد",
+  "Role name is already taken. Please choose another one.": "نام نقش قبلاً انتخاب شده است. لطفاً نام دیگری را انتخاب کنید.",
+  "Roles": "نقش‌ها",
+  "Roles added successfully": "نقش‌ها با موفقیت افزوده شدند",
   "Settings": "تنظیمات",
   "Show password": "نمایش رمز عبور",
   "Success": "موفقیت‌آمیز",
   "Switch Profile": "تغییر پروفایل",
   "Switch User": "تغییر کاربر",
-  "UAvatar": "UAvatar",
-  "UBadge": "UBadge",
-  "UButton": "UButton",
-  "UDropdownMenu": "UDropdownMenu",
-  "UPagination": "UPagination",
-  "UTable": "UTable",
+  "UAvatar": "آواتار U",
+  "UBadge": "نشان U",
+  "UButton": "دکمه U",
+  "UDropdownMenu": "منوی کشویی U",
+  "UPagination": "صفحه‌بندی U",
+  "UTable": "جدول U",
   "Update Profile": "به‌روزرسانی پروفایل",
   "User Registration": "ثبت‌نام کاربر",
-  "User logged in successfully": "ورود کاربر با موفقیت انجام شد",
+  "User logged in successfully": "کاربر با موفقیت وارد شد",
   "User registered successfully": "کاربر با موفقیت ثبت شد",
   "Username": "نام کاربری",
-  "Username is already taken. Please choose another one.": "این نام کاربری قبلاً انتخاب شده است. لطفاً نام دیگری را انتخاب کنید.",
+  "Username is already taken. Please choose another one.": "این نام کاربری قبلاً استفاده شده است. لطفاً نام دیگری را انتخاب کنید.",
   "Users": "کاربران",
   "Your Current Password": "رمز عبور فعلی شما",
   "Your first name": "نام شما",
@@ -101,20 +101,18 @@
   "div": "div",
   "email": "ایمیل",
   "firstName": "نام",
-  "i18n": "i18n",
+  "i18n": "بین‌المللی‌سازی",
   "lastName": "نام خانوادگی",
   "more": "بیشتر",
   "name": "نام",
   "password": "رمز عبور",
-  "path": "path",
-  "permissions": "permissions",
+  "path": "مسیر",
+  "permissions": "مجوزها",
   "salt": "salt",
-  "siteName": "مَموچی",
-  "status": "status",
+  "status": "وضعیت",
   "theme": "قالب",
-  "title": "title",
-  "titleFirst": "مَـ",
-  "titleSecond": "موچیــ",
-  "type": "type",
-  "username": "نام کاربری"
+  "title": "عنوان",
+  "type": "نوع",
+  "username": "نام کاربری",
+  "vue": "ویو"
 }
