--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -1,5 +1,4 @@
 {
-  " Loading...": " Loading...",
   ".not-draggable": ".not-draggable",
   "About": "About",
   "Add New Role": "Add New Role",
@@ -8,9 +7,9 @@
   "Add Role to User": "Add Role to User",
   "At least one permission must be selected": "At least one permission must be selected",
   "At least one role must be selected": "At least one role must be selected",
-  "Author: ": "Author: ",
+  "Author:": "Author:",
   "Builds": "Builds",
-  "Category: ": "Category: ",
+  "Category:": "Category:",
   "Change Password": "Change Password",
   "Change Your Password": "Change Your Password",
   "Comments": "Comments",
@@ -21,7 +20,7 @@
   "Content saved successfully": "Content saved successfully",
   "Current Password": "Current Password",
   "Dashboard": "Dashboard",
-  "Date: ": "Date: ",
+  "Date:": "Date:",
   "Description": "Description",
   "English": "English",
   "Enter Password": "Enter Password",
@@ -38,7 +37,6 @@
   "Failed to change password": "Failed to change password",
   "Failed to retrieve the newly created user": "Failed to retrieve the newly created user",
   "First Name": "First Name",
-  "Help": "Help",
   "Hide password": "Hide password",
   "Home": "Home",
   "Internal Server Error": "Internal Server Error",
@@ -49,7 +47,6 @@
   "Latest Incoming": "Latest Incoming",
   "Login": "Login",
   "Login failed": "Login failed",
-  "Manage": "Manage",
   "Manage Roles": "Manage Roles",
   "Manage Users": "Manage Users",
   "Missing required fields: firstName, lastName, userName, or password": "Missing required fields: firstName, lastName, userName, or password",
@@ -74,6 +71,7 @@
   "Role name is already taken. Please choose another one.": "Role name is already taken. Please choose another one.",
   "Roles": "Roles",
   "Roles added successfully": "Roles added successfully",
+  "Search": "Search",
   "Settings": "Settings",
   "Show password": "Show password",
   "Success": "Success",
@@ -106,7 +104,6 @@
   "div": "div",
   "email": "Email",
   "firstName": "First Name",
-  "i18n": "i18n",
   "lastName": "Last Name",
   "more": "more",
   "name": "name",
@@ -117,7 +114,6 @@
   "projects": "projects",
   "salt": "salt",
   "status": "status",
-  "theme": "theme",
   "title": "title",
   "type": "type",
   "username": "username",
