--- a/i18n/locales/fa.json
+++ b/i18n/locales/fa.json
@@ -1,5 +1,4 @@
 {
-  " Loading...": " Loading...",
   ".not-draggable": ".not-draggable",
   "About": "درباره",
   "Add New Role": "افزودن نقش جدید",
@@ -8,9 +7,9 @@
   "Add Role to User": "افزودن نقش به کاربر",
   "At least one permission must be selected": "حداقل یک مجوز باید انتخاب شود",
   "At least one role must be selected": "حداقل یک نقش باید انتخاب شود",
-  "Author: ": "نویسنده: ",
+  "Author:": "نویسنده:",
   "Builds": "ساخت‌ها",
-  "Category: ": "دسته: ",
+  "Category:": "دسته‌بندی:",
   "Change Password": "تغییر رمز عبور",
   "Change Your Password": "رمز عبور خود را تغییر دهید",
   "Comments": "نظرات",
@@ -21,7 +20,7 @@
   "Content saved successfully": "محتوا با موفقیت ذخیره شد",
   "Current Password": "رمز عبور فعلی",
   "Dashboard": "داشبورد",
-  "Date: ": "تاریخ: ",
+  "Date:": "تاریخ:",
   "Description": "توضیحات",
   "English": "انگلیسی",
   "Enter Password": "رمز عبور را وارد کنید",
@@ -38,7 +37,6 @@
   "Failed to change password": "تغییر رمز عبور با شکست مواجه شد",
   "Failed to retrieve the newly created user": "دریافت اطلاعات کاربر جدید با مشکل مواجه شد",
   "First Name": "نام",
-  "Help": "راهنما",
   "Hide password": "پنهان کردن رمز عبور",
   "Home": "خانه",
   "Internal Server Error": "خطای داخلی سرور",
@@ -49,7 +47,6 @@
   "Latest Incoming": "آخرین ورودی‌ها",
   "Login": "ورود",
   "Login failed": "ورود ناموفق بود",
-  "Manage": "مدیریت",
   "Manage Roles": "مدیریت نقش‌ها",
   "Manage Users": "مدیریت کاربران",
   "Missing required fields: firstName, lastName, userName, or password": "فیلدهای ضروری: نام، نام خانوادگی، نام کاربری یا رمز عبور وارد نشده‌اند",
@@ -74,6 +71,7 @@
   "Role name is already taken. Please choose another one.": "نام نقش قبلاً انتخاب شده است. لطفاً نام دیگری را انتخاب کنید.",
   "Roles": "نقش‌ها",
   "Roles added successfully": "نقش‌ها با موفقیت افزوده شدند",
+  "Search": "جستجو",
   "Settings": "تنظیمات",
   "Show password": "نمایش رمز عبور",
   "Success": "موفقیت‌آمیز",
@@ -106,7 +104,6 @@
   "div": "div",
   "email": "ایمیل",
   "firstName": "نام",
-  "i18n": "بین‌المللی‌سازی",
   "lastName": "نام خانوادگی",
   "more": "بیشتر",
   "name": "نام",
@@ -117,7 +114,6 @@
   "projects": "پروژه‌ها",
   "salt": "salt",
   "status": "وضعیت",
-  "theme": "قالب",
   "title": "عنوان",
   "type": "نوع",
   "username": "نام کاربری",
