--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -53,7 +53,11 @@
   "Missing required fields: userName, password": "Missing required fields: userName, password",
   "Must be at least 3 characters": "Must be at least 3 characters",
   "New Password": "New Password",
+  "Note Section": "Note Section",
+  "Notes": "Notes",
   "Noting is Here :(": "Noting is Here :(",
+  "Page": "Page",
+  "Pages Section": "Pages Section",
   "Password": "Password",
   "Password changed successfully": "Password changed successfully",
   "Password must be at least 6 characters": "Password must be at least 6 characters",
