--- a/i18n/locales/fa.json
+++ b/i18n/locales/fa.json
@@ -53,7 +53,11 @@
   "Missing required fields: userName, password": "نام کاربری و رمز عبور الزامی است",
   "Must be at least 3 characters": "باید حداقل ۳ کاراکتر باشد",
   "New Password": "رمز عبور جدید",
+  "Note Section": "Note Section",
+  "Notes": "Notes",
   "Noting is Here :(": "چیزی اینجا وجود ندارد :(",
+  "Page": "Page",
+  "Pages Section": "Pages Section",
   "Password": "رمز عبور",
   "Password changed successfully": "رمز عبور با موفقیت تغییر کرد",
   "Password must be at least 6 characters": "رمز عبور باید حداقل ۶ کاراکتر باشد",
