--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -81,6 +81,7 @@
   "Success": "Success",
   "Switch Profile": "Switch Profile",
   "Switch User": "Switch User",
+  "Type to Search...": "Type to Search...",
   "UAvatar": "UAvatar",
   "UBadge": "UBadge",
   "UButton": "UButton",
