--- a/i18n/locales/fa.json
+++ b/i18n/locales/fa.json
@@ -53,11 +53,11 @@
   "Missing required fields: userName, password": "نام کاربری و رمز عبور الزامی است",
   "Must be at least 3 characters": "باید حداقل ۳ کاراکتر باشد",
   "New Password": "رمز عبور جدید",
-  "Note Section": "Note Section",
-  "Notes": "Notes",
+  "Note Section": "بخش یادداشت",
+  "Notes": "یادداشت‌ها",
   "Noting is Here :(": "چیزی اینجا وجود ندارد :(",
-  "Page": "Page",
-  "Pages Section": "Pages Section",
+  "Page": "صفحه",
+  "Pages Section": "بخش صفحات",
   "Password": "رمز عبور",
   "Password changed successfully": "رمز عبور با موفقیت تغییر کرد",
   "Password must be at least 6 characters": "رمز عبور باید حداقل ۶ کاراکتر باشد",
@@ -81,6 +81,7 @@
   "Success": "موفقیت‌آمیز",
   "Switch Profile": "تغییر پروفایل",
   "Switch User": "تغییر کاربر",
+  "Type to Search...": "برای جستجو تایپ کنید...",
   "UAvatar": "آواتار U",
   "UBadge": "نشان U",
   "UButton": "دکمه U",
