--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -12,6 +12,7 @@
   "Category:": "Category:",
   "Change Password": "Change Password",
   "Change Your Password": "Change Your Password",
+  "Code": "Code",
   "Comments": "Comments",
   "Confirm Password": "Confirm Password",
   "Confirm Password must be at least 6 characters": "Confirm Password must be at least 6 characters",
@@ -22,6 +23,7 @@
   "Dashboard": "Dashboard",
   "Date:": "Date:",
   "Description": "Description",
+  "Edit This page": "Edit This page",
   "English": "English",
   "Enter Password": "Enter Password",
   "Enter password": "Enter password",
@@ -53,6 +55,7 @@
   "Missing required fields: userName, password": "Missing required fields: userName, password",
   "Must be at least 3 characters": "Must be at least 3 characters",
   "New Password": "New Password",
+  "No results found": "No results found",
   "Note Section": "Note Section",
   "Notes": "Notes",
   "Noting is Here :(": "Noting is Here :(",
@@ -67,7 +70,6 @@
   "Personal Details": "Personal Details",
   "Please provide a role name, a description, and select the appropriate permissions.": "Please provide a role name, a description, and select the appropriate permissions.",
   "Profile": "Profile",
-  "Publish": "Publish",
   "Register": "Register",
   "Registered successfully": "Registered successfully",
   "Role Name": "Role Name",
@@ -75,6 +77,7 @@
   "Role name is already taken. Please choose another one.": "Role name is already taken. Please choose another one.",
   "Roles": "Roles",
   "Roles added successfully": "Roles added successfully",
+  "Save": "Save",
   "Search": "Search",
   "Settings": "Settings",
   "Show password": "Show password",
@@ -95,6 +98,7 @@
   "Username": "Username",
   "Username is already taken. Please choose another one.": "Username is already taken. Please choose another one.",
   "Users": "Users",
+  "Visual": "Visual",
   "Your Current Password": "Your Current Password",
   "Your first name": "Your first name",
   "Your last name": "Your last name",
