--- a/i18n/locales/fa.json
+++ b/i18n/locales/fa.json
@@ -12,6 +12,7 @@
   "Category:": "دسته‌بندی:",
   "Change Password": "تغییر رمز عبور",
   "Change Your Password": "رمز عبور خود را تغییر دهید",
+  "Code": "Code",
   "Comments": "نظرات",
   "Confirm Password": "تأیید رمز عبور",
   "Confirm Password must be at least 6 characters": "رمز عبور تأیید شده باید حداقل ۶ کاراکتر باشد",
@@ -22,6 +23,7 @@
   "Dashboard": "داشبورد",
   "Date:": "تاریخ:",
   "Description": "توضیحات",
+  "Edit This page": "Edit This page",
   "English": "انگلیسی",
   "Enter Password": "رمز عبور را وارد کنید",
   "Enter password": "رمز عبور را وارد کنید",
@@ -53,6 +55,7 @@
   "Missing required fields: userName, password": "نام کاربری و رمز عبور الزامی است",
   "Must be at least 3 characters": "باید حداقل ۳ کاراکتر باشد",
   "New Password": "رمز عبور جدید",
+  "No results found": "No results found",
   "Note Section": "بخش یادداشت",
   "Notes": "یادداشت‌ها",
   "Noting is Here :(": "چیزی اینجا وجود ندارد :(",
@@ -67,7 +70,6 @@
   "Personal Details": "اطلاعات شخصی",
   "Please provide a role name, a description, and select the appropriate permissions.": "لطفاً نام نقش، توضیحات و مجوزهای مناسب را انتخاب کنید.",
   "Profile": "پروفایل",
-  "Publish": "انتشار",
   "Register": "ثبت‌نام",
   "Registered successfully": "ثبت‌نام با موفقیت انجام شد",
   "Role Name": "نام نقش",
@@ -75,6 +77,7 @@
   "Role name is already taken. Please choose another one.": "نام نقش قبلاً انتخاب شده است. لطفاً نام دیگری را انتخاب کنید.",
   "Roles": "نقش‌ها",
   "Roles added successfully": "نقش‌ها با موفقیت افزوده شدند",
+  "Save": "Save",
   "Search": "جستجو",
   "Settings": "تنظیمات",
   "Show password": "نمایش رمز عبور",
@@ -95,6 +98,7 @@
   "Username": "نام کاربری",
   "Username is already taken. Please choose another one.": "این نام کاربری قبلاً استفاده شده است. لطفاً نام دیگری را انتخاب کنید.",
   "Users": "کاربران",
+  "Visual": "Visual",
   "Your Current Password": "رمز عبور فعلی شما",
   "Your first name": "نام شما",
   "Your last name": "نام خانوادگی شما",
