--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -1,10 +1,13 @@
 {
   ".not-draggable": ".not-draggable",
   "About": "About",
+  "Add D1 Database Details": "Add D1 Database Details",
   "Add New Role": "Add New Role",
   "Add New User": "Add New User",
   "Add Role": "Add Role",
   "Add Role to User": "Add Role to User",
+  "Admin Register": "Admin Register",
+  "App installed Successfully": "App installed Successfully",
   "At least one permission must be selected": "At least one permission must be selected",
   "At least one role must be selected": "At least one role must be selected",
   "Author:": "Author:",
@@ -21,6 +24,7 @@
   "Content saved successfully": "Content saved successfully",
   "Current Password": "Current Password",
   "Dashboard": "Dashboard",
+  "Database": "Database",
   "Date:": "Date:",
   "Description": "Description",
   "Edit This page": "Edit This page",
@@ -38,9 +42,13 @@
   "Failed to add roles to user": "Failed to add roles to user",
   "Failed to change password": "Failed to change password",
   "Failed to retrieve the newly created user": "Failed to retrieve the newly created user",
+  "Finish": "Finish",
   "First Name": "First Name",
   "Hide password": "Hide password",
   "Home": "Home",
+  "Initial Database": "Initial Database",
+  "Initializing Database Schema": "Initializing Database Schema",
+  "Installing App": "Installing App",
   "Internal Server Error": "Internal Server Error",
   "Internal Server Error. Please try again later.": "Internal Server Error. Please try again later.",
   "Invalid username or password": "Invalid username or password",
@@ -55,6 +63,7 @@
   "Missing required fields: userName, password": "Missing required fields: userName, password",
   "Must be at least 3 characters": "Must be at least 3 characters",
   "New Password": "New Password",
+  "Next": "Next",
   "No results found": "No results found",
   "Note Section": "Note Section",
   "Notes": "Notes",
@@ -69,8 +78,10 @@
   "Persian": "Persian",
   "Personal Details": "Personal Details",
   "Please provide a role name, a description, and select the appropriate permissions.": "Please provide a role name, a description, and select the appropriate permissions.",
+  "Prev": "Prev",
   "Profile": "Profile",
   "Register": "Register",
+  "Register Admin User": "Register Admin User",
   "Registered successfully": "Registered successfully",
   "Role Name": "Role Name",
   "Role added successfully": "Role added successfully",
