--- a/i18n/locales/fa.json
+++ b/i18n/locales/fa.json
@@ -1,10 +1,13 @@
 {
   ".not-draggable": ".not-draggable",
   "About": "درباره",
+  "Add D1 Database Details": "Add D1 Database Details",
   "Add New Role": "افزودن نقش جدید",
   "Add New User": "افزودن کاربر جدید",
   "Add Role": "افزودن نقش",
   "Add Role to User": "افزودن نقش به کاربر",
+  "Admin Register": "Admin Register",
+  "App installed Successfully": "App installed Successfully",
   "At least one permission must be selected": "حداقل یک مجوز باید انتخاب شود",
   "At least one role must be selected": "حداقل یک نقش باید انتخاب شود",
   "Author:": "نویسنده:",
@@ -21,6 +24,7 @@
   "Content saved successfully": "محتوا با موفقیت ذخیره شد",
   "Current Password": "رمز عبور فعلی",
   "Dashboard": "داشبورد",
+  "Database": "Database",
   "Date:": "تاریخ:",
   "Description": "توضیحات",
   "Edit This page": "Edit This page",
@@ -38,9 +42,13 @@
   "Failed to add roles to user": "افزودن نقش‌ها به کاربر با شکست مواجه شد",
   "Failed to change password": "تغییر رمز عبور با شکست مواجه شد",
   "Failed to retrieve the newly created user": "دریافت اطلاعات کاربر جدید با مشکل مواجه شد",
+  "Finish": "Finish",
   "First Name": "نام",
   "Hide password": "پنهان کردن رمز عبور",
   "Home": "خانه",
+  "Initial Database": "Initial Database",
+  "Initializing Database Schema": "Initializing Database Schema",
+  "Installing App": "Installing App",
   "Internal Server Error": "خطای داخلی سرور",
   "Internal Server Error. Please try again later.": "خطای داخلی سرور. لطفاً بعداً دوباره امتحان کنید.",
   "Invalid username or password": "نام کاربری یا رمز عبور نامعتبر است",
@@ -55,6 +63,7 @@
   "Missing required fields: userName, password": "نام کاربری و رمز عبور الزامی است",
   "Must be at least 3 characters": "باید حداقل ۳ کاراکتر باشد",
   "New Password": "رمز عبور جدید",
+  "Next": "Next",
   "No results found": "No results found",
   "Note Section": "بخش یادداشت",
   "Notes": "یادداشت‌ها",
@@ -69,8 +78,10 @@
   "Persian": "فارسی",
   "Personal Details": "اطلاعات شخصی",
   "Please provide a role name, a description, and select the appropriate permissions.": "لطفاً نام نقش، توضیحات و مجوزهای مناسب را انتخاب کنید.",
+  "Prev": "Prev",
   "Profile": "پروفایل",
   "Register": "ثبت‌نام",
+  "Register Admin User": "Register Admin User",
   "Registered successfully": "ثبت‌نام با موفقیت انجام شد",
   "Role Name": "نام نقش",
   "Role added successfully": "نقش با موفقیت افزوده شد",
