--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -11,7 +11,10 @@
   "At least one permission must be selected": "At least one permission must be selected",
   "At least one role must be selected": "At least one role must be selected",
   "Author:": "Author:",
+  "Blockquote": "Blockquote",
+  "Bold": "Bold",
   "Builds": "Builds",
+  "Bullet List": "Bullet List",
   "Category:": "Category:",
   "Change Password": "Change Password",
   "Change Your Password": "Change Your Password",
@@ -44,14 +47,19 @@
   "Failed to retrieve the newly created user": "Failed to retrieve the newly created user",
   "Finish": "Finish",
   "First Name": "First Name",
+  "Heading 1": "Heading 1",
+  "Heading 2": "Heading 2",
+  "Heading 3": "Heading 3",
   "Hide password": "Hide password",
   "Home": "Home",
+  "Horizontal Line": "Horizontal Line",
   "Initial Database": "Initial Database",
   "Initializing Database Schema": "Initializing Database Schema",
   "Installing App": "Installing App",
   "Internal Server Error": "Internal Server Error",
   "Internal Server Error. Please try again later.": "Internal Server Error. Please try again later.",
   "Invalid username or password": "Invalid username or password",
+  "Italic": "Italic",
   "Items": "Items",
   "Last Name": "Last Name",
   "Latest Incoming": "Latest Incoming",
@@ -68,8 +76,10 @@
   "Note Section": "Note Section",
   "Notes": "Notes",
   "Noting is Here :(": "Noting is Here :(",
+  "Ordered List": "Ordered List",
   "Page": "Page",
   "Pages Section": "Pages Section",
+  "Paragraph": "Paragraph",
   "Password": "Password",
   "Password changed successfully": "Password changed successfully",
   "Password must be at least 6 characters": "Password must be at least 6 characters",
@@ -92,9 +102,11 @@
   "Search": "Search",
   "Settings": "Settings",
   "Show password": "Show password",
+  "Strikethrough": "Strikethrough",
   "Success": "Success",
   "Switch Profile": "Switch Profile",
   "Switch User": "Switch User",
+  "Type Something...": "Type Something...",
   "Type to Search...": "Type to Search...",
   "UAvatar": "UAvatar",
   "UBadge": "UBadge",
