--- a/i18n/locales/fa.json
+++ b/i18n/locales/fa.json
@@ -11,7 +11,10 @@
   "At least one permission must be selected": "حداقل یک مجوز باید انتخاب شود",
   "At least one role must be selected": "حداقل یک نقش باید انتخاب شود",
   "Author:": "نویسنده:",
+  "Blockquote": "Blockquote",
+  "Bold": "Bold",
   "Builds": "ساخت‌ها",
+  "Bullet List": "Bullet List",
   "Category:": "دسته‌بندی:",
   "Change Password": "تغییر رمز عبور",
   "Change Your Password": "رمز عبور خود را تغییر دهید",
@@ -44,14 +47,19 @@
   "Failed to retrieve the newly created user": "دریافت اطلاعات کاربر جدید با مشکل مواجه شد",
   "Finish": "Finish",
   "First Name": "نام",
+  "Heading 1": "Heading 1",
+  "Heading 2": "Heading 2",
+  "Heading 3": "Heading 3",
   "Hide password": "پنهان کردن رمز عبور",
   "Home": "خانه",
+  "Horizontal Line": "Horizontal Line",
   "Initial Database": "Initial Database",
   "Initializing Database Schema": "Initializing Database Schema",
   "Installing App": "Installing App",
   "Internal Server Error": "خطای داخلی سرور",
   "Internal Server Error. Please try again later.": "خطای داخلی سرور. لطفاً بعداً دوباره امتحان کنید.",
   "Invalid username or password": "نام کاربری یا رمز عبور نامعتبر است",
+  "Italic": "Italic",
   "Items": "آیتم‌ها",
   "Last Name": "نام خانوادگی",
   "Latest Incoming": "آخرین ورودی‌ها",
@@ -68,8 +76,10 @@
   "Note Section": "بخش یادداشت",
   "Notes": "یادداشت‌ها",
   "Noting is Here :(": "چیزی اینجا وجود ندارد :(",
+  "Ordered List": "Ordered List",
   "Page": "صفحه",
   "Pages Section": "بخش صفحات",
+  "Paragraph": "Paragraph",
   "Password": "رمز عبور",
   "Password changed successfully": "رمز عبور با موفقیت تغییر کرد",
   "Password must be at least 6 characters": "رمز عبور باید حداقل ۶ کاراکتر باشد",
@@ -92,9 +102,11 @@
   "Search": "جستجو",
   "Settings": "تنظیمات",
   "Show password": "نمایش رمز عبور",
+  "Strikethrough": "Strikethrough",
   "Success": "موفقیت‌آمیز",
   "Switch Profile": "تغییر پروفایل",
   "Switch User": "تغییر کاربر",
+  "Type Something...": "Type Something...",
   "Type to Search...": "برای جستجو تایپ کنید...",
   "UAvatar": "آواتار U",
   "UBadge": "نشان U",
