basic installer flow

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -28,6 +28,7 @@
   "Current Password": "Current Password",
   "Dashboard": "Dashboard",
   "Database": "Database",
+  "Database Connected": "Database Connected",
   "Date:": "Date:",
   "Description": "Description",
   "Edit This page": "Edit This page",
@@ -72,6 +73,7 @@
   "Must be at least 3 characters": "Must be at least 3 characters",
   "New Password": "New Password",
   "Next": "Next",
+  "No Database": "No Database",
   "No results found": "No results found",
   "Note Section": "Note Section",
   "Notes": "Notes",
@@ -131,6 +133,8 @@
   "avatar": "Avatar",
   "books": "books",
   "cccc": "cccc",
+  "database in Connected": "database in Connected",
+  "database in Not Connected": "database in Not Connected",
   "description": "Web Developer",
   "displayName": "Display Name",
   "div": "div",
