--- a/i18n/locales/fa.json
+++ b/i18n/locales/fa.json
@@ -28,6 +28,7 @@
   "Current Password": "رمز عبور فعلی",
   "Dashboard": "داشبورد",
   "Database": "Database",
+  "Database Connected": "Database Connected",
   "Date:": "تاریخ:",
   "Description": "توضیحات",
   "Edit This page": "Edit This page",
@@ -72,6 +73,7 @@
   "Must be at least 3 characters": "باید حداقل ۳ کاراکتر باشد",
   "New Password": "رمز عبور جدید",
   "Next": "Next",
+  "No Database": "No Database",
   "No results found": "No results found",
   "Note Section": "بخش یادداشت",
   "Notes": "یادداشت‌ها",
@@ -131,6 +133,8 @@
   "avatar": "آواتار",
   "books": "کتاب‌ها",
   "cccc": "cccc",
+  "database in Connected": "database in Connected",
+  "database in Not Connected": "database in Not Connected",
   "description": "توضیحات",
   "displayName": "نام نمایشی",
   "div": "div",
