better user flow

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -15,6 +15,7 @@
   "An unexpected error occurred. Please try again later.": "An unexpected error occurred. Please try again later.",
   "App Successfully installed": "App Successfully installed",
   "Apply and validate your database schema migrations to set up all required tables.": "Apply and validate your database schema migrations to set up all required tables.",
+  "Approve": "Approve",
   "At least one permission must be selected": "At least one permission must be selected",
   "At least one role must be selected": "At least one role must be selected",
   "Author:": "Author:",
@@ -27,6 +28,8 @@
   "Change Password": "Change Password",
   "Change Your Password": "Change Your Password",
   "Code": "Code",
+  "Comment Approved": "Comment Approved",
+  "Comment Denied": "Comment Denied",
   "Comments": "Comments",
   "Confirm Password": "Confirm Password",
   "Confirm Password must be at least 6 characters": "Confirm Password must be at least 6 characters",
@@ -47,6 +50,7 @@
   "Database connection is not working.": "Database connection is not working.",
   "Database connection is working.": "Database connection is working.",
   "Date:": "Date:",
+  "Deny": "Deny",
   "Description": "Description",
   "Edit This page": "Edit This page",
   "English": "English",
@@ -91,11 +95,13 @@
   "Load Default Data": "Load Default Data",
   "Login": "Login",
   "Login failed": "Login failed",
+  "Login successful": "Login successful",
   "Mamoochi Database  Installation": "Mamoochi Database  Installation",
   "Manage Roles": "Manage Roles",
   "Manage Users": "Manage Users",
-  "Missing required fields: firstName, lastName, userName, or password": "Missing required fields: firstName, lastName, userName, or password",
-  "Missing required fields: userName, password": "Missing required fields: userName, password",
+  "Missing required fields: firstName, lastName, about, userName, password, or pub": "Missing required fields: firstName, lastName, about, userName, password, or pub",
+  "Missing required fields: userName, password, pub": "Missing required fields: userName, password, pub",
+  "Must be at least 2 characters": "Must be at least 2 characters",
   "Must be at least 3 characters": "Must be at least 3 characters",
   "New Password": "New Password",
   "No Database Connection": "No Database Connection",
@@ -115,7 +121,7 @@
   "Persian": "Persian",
   "Personal Details": "Personal Details",
   "Please provide a role name, a description, and select the appropriate permissions.": "Please provide a role name, a description, and select the appropriate permissions.",
-  "Please provide firstName, lastName, userName, and password.": "Please provide firstName, lastName, userName, and password.",
+  "Please provide firstName, lastName, about, userName, password, and pub.": "Please provide firstName, lastName, about, userName, password, and pub.",
   "Please wait while we apply the necessary database migrations...": "Please wait while we apply the necessary database migrations...",
   "Preparing Database": "Preparing Database",
   "Previous": "Previous",
@@ -123,6 +129,7 @@
   "Profile": "Profile",
   "Register": "Register",
   "Registered successfully": "Registered successfully",
+  "Reply": "Reply",
   "Role Name": "Role Name",
   "Role added successfully": "Role added successfully",
   "Role name is already taken. Please choose another one.": "Role name is already taken. Please choose another one.",
@@ -132,6 +139,7 @@
   "Running Migrations": "Running Migrations",
   "Save": "Save",
   "Search": "Search",
+  "Send Comment": "Send Comment",
   "Settings": "Settings",
   "Show password": "Show password",
   "Start Installation": "Start Installation",
@@ -160,6 +168,7 @@
   "Users": "Users",
   "Visual": "Visual",
   "We are setting up the necessary configurations. This may take a moment...": "We are setting up the necessary configurations. This may take a moment...",
+  "Write Your Comment ...": "Write Your Comment ...",
   "Your Current Password": "Your Current Password",
   "Your application is successfully connected to the D1 database. You can now proceed with the installation process.": "Your application is successfully connected to the D1 database. You can now proceed with the installation process.",
   "Your application is successfully installed, please update installed value in app.config.ts.": "Your application is successfully installed, please update installed value in app.config.ts.",
@@ -172,25 +181,34 @@
   "[role=\"dialog\"]": "[role=\"dialog\"]",
   "about": "About",
   "avatar": "Avatar",
+  "body": "body",
   "books": "books",
+  "build_name": "build_name",
   "cccc": "cccc",
   "description": "Web Developer",
+  "device_name": "device_name",
   "displayName": "Display Name",
   "div": "div",
   "email": "Email",
   "firstName": "First Name",
+  "ip_address": "ip_address",
   "lastName": "Last Name",
+  "message": "message",
   "more": "more",
   "name": "name",
   "notes": "notes",
   "password": "password",
   "path": "path",
+  "pending": "pending",
   "permissions": "permissions",
   "projects": "projects",
-  "salt": "salt",
+  "pub_key": "pub_key",
+  "published": "published",
+  "route_path": "route_path",
   "status": "status",
   "title": "title",
   "type": "type",
+  "user_agent": "user_agent",
   "username": "username",
   "vue": "vue"
 }
