--- a/i18n/locales/fa.json
+++ b/i18n/locales/fa.json
@@ -15,6 +15,7 @@
   "An unexpected error occurred. Please try again later.": "خطای غیرمنتظره‌ای رخ داد. لطفاً بعداً دوباره امتحان کنید.",
   "App Successfully installed": "برنامه با موفقیت نصب شد",
   "Apply and validate your database schema migrations to set up all required tables.": "مهاجرت‌های طرح پایگاه داده را اعمال و اعتبارسنجی کنید تا جداول مورد نیاز راه‌اندازی شوند.",
+  "Approve": "Approve",
   "At least one permission must be selected": "حداقل یک مجوز باید انتخاب شود",
   "At least one role must be selected": "حداقل یک نقش باید انتخاب شود",
   "Author:": "نویسنده:",
@@ -27,6 +28,8 @@
   "Change Password": "تغییر رمز عبور",
   "Change Your Password": "رمز عبور خود را تغییر دهید",
   "Code": "کد",
+  "Comment Approved": "Comment Approved",
+  "Comment Denied": "Comment Denied",
   "Comments": "نظرات",
   "Confirm Password": "تأیید رمز عبور",
   "Confirm Password must be at least 6 characters": "رمز عبور تأیید شده باید حداقل ۶ کاراکتر باشد",
@@ -47,6 +50,7 @@
   "Database connection is not working.": "اتصال پایگاه داده کار نمی‌کند.",
   "Database connection is working.": "اتصال پایگاه داده کار می‌کند.",
   "Date:": "تاریخ:",
+  "Deny": "Deny",
   "Description": "توضیحات",
   "Edit This page": "ویرایش این صفحه",
   "English": "انگلیسی",
@@ -91,11 +95,13 @@
   "Load Default Data": "بارگذاری داده‌های پیش‌فرض",
   "Login": "ورود",
   "Login failed": "ورود ناموفق بود",
+  "Login successful": "Login successful",
   "Mamoochi Database  Installation": "نصب پایگاه داده Mamoochi",
   "Manage Roles": "مدیریت نقش‌ها",
   "Manage Users": "مدیریت کاربران",
-  "Missing required fields: firstName, lastName, userName, or password": "Missing required fields: firstName, lastName, userName, or password",
-  "Missing required fields: userName, password": "نام کاربری و رمز عبور الزامی است",
+  "Missing required fields: firstName, lastName, about, userName, password, or pub": "Missing required fields: firstName, lastName, about, userName, password, or pub",
+  "Missing required fields: userName, password, pub": "Missing required fields: userName, password, pub",
+  "Must be at least 2 characters": "Must be at least 2 characters",
   "Must be at least 3 characters": "باید حداقل ۳ کاراکتر باشد",
   "New Password": "رمز عبور جدید",
   "No Database Connection": "اتصال پایگاه داده وجود ندارد",
@@ -115,7 +121,7 @@
   "Persian": "فارسی",
   "Personal Details": "اطلاعات شخصی",
   "Please provide a role name, a description, and select the appropriate permissions.": "لطفاً نام نقش، توضیحات و مجوزهای مناسب را انتخاب کنید.",
-  "Please provide firstName, lastName, userName, and password.": "لطفاً firstName، lastName، userName و رمز عبور را وارد کنید.",
+  "Please provide firstName, lastName, about, userName, password, and pub.": "Please provide firstName, lastName, about, userName, password, and pub.",
   "Please wait while we apply the necessary database migrations...": "لطفاً صبر کنید در حالی که مهاجرت‌های لازم پایگاه داده اعمال می‌شود...",
   "Preparing Database": "در حال آماده‌سازی پایگاه داده",
   "Previous": "قبلی",
@@ -123,6 +129,7 @@
   "Profile": "پروفایل",
   "Register": "ثبت‌نام",
   "Registered successfully": "Registered successfully",
+  "Reply": "Reply",
   "Role Name": "نام نقش",
   "Role added successfully": "نقش با موفقیت افزوده شد",
   "Role name is already taken. Please choose another one.": "نام نقش قبلاً انتخاب شده است. لطفاً نام دیگری را انتخاب کنید.",
@@ -132,6 +139,7 @@
   "Running Migrations": "در حال اجرای مهاجرت‌ها",
   "Save": "ذخیره",
   "Search": "جستجو",
+  "Send Comment": "Send Comment",
   "Settings": "تنظیمات",
   "Show password": "نمایش رمز عبور",
   "Start Installation": "شروع نصب",
@@ -160,6 +168,7 @@
   "Users": "کاربران",
   "Visual": "تصویری",
   "We are setting up the necessary configurations. This may take a moment...": "در حال راه‌اندازی تنظیمات لازم هستیم. ممکن است کمی طول بکشد...",
+  "Write Your Comment ...": "Write Your Comment ...",
   "Your Current Password": "رمز عبور فعلی شما",
   "Your application is successfully connected to the D1 database. You can now proceed with the installation process.": "برنامه شما با موفقیت به پایگاه داده D1 متصل شده است. اکنون می‌توانید به فرآیند نصب ادامه دهید.",
   "Your application is successfully installed, please update installed value in app.config.ts.": "برنامه شما با موفقیت نصب شده است، لطفاً مقدار installed را در app.config.ts به‌روزرسانی کنید.",
@@ -172,25 +181,34 @@
   "[role=\"dialog\"]": "[role=\"dialog\"]",
   "about": "درباره",
   "avatar": "آواتار",
+  "body": "body",
   "books": "کتاب‌ها",
+  "build_name": "build_name",
   "cccc": "cccc",
   "description": "توضیحات",
+  "device_name": "device_name",
   "displayName": "نام نمایشی",
   "div": "div",
   "email": "ایمیل",
   "firstName": "نام",
+  "ip_address": "ip_address",
   "lastName": "نام خانوادگی",
+  "message": "message",
   "more": "بیشتر",
   "name": "نام",
   "notes": "یادداشت‌ها",
   "password": "رمز عبور",
   "path": "مسیر",
+  "pending": "pending",
   "permissions": "مجوزها",
   "projects": "پروژه‌ها",
-  "salt": "salt",
+  "pub_key": "pub_key",
+  "published": "published",
+  "route_path": "route_path",
   "status": "وضعیت",
   "title": "عنوان",
   "type": "نوع",
+  "user_agent": "user_agent",
   "username": "نام کاربری",
-  "vue": "ویو"
+  "vue": "vue"
 }
